# cron-joules

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  samconfig.toml.example  template.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  cron-check.yml  deploy.yml  telegram-poll.yml
events/: assistant_query.json  scheduled_check.json  telegram_status.json  telegram_vacation_on.json
scripts/: tesla_auth.py
src/: __init__.py  main.py
src/handlers/: assistant_query.py  check_battery.py  telegram_webhook.py
src/services/: config_service.py  kia_client.py  telegram_client.py  tesla_client.py  vehicle_client.py
src/utils/: secrets.py
tests/: conftest.py  test_check_battery.py  test_kia_client.py  test_telegram_webhook.py  test_tesla_client.py  test_vehicle_client.py
